--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <h1>Home</h1>
     <nav class="navbar sticky-top bg-body-tertiary">
-      <ul class="container-fluid">
+      <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>  <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>  
+        <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
         <a href="index.html" class="active">Home old</a>
