--- a/index.html
+++ b/index.html
@@ -22,6 +22,42 @@
         <a href="about.html">About old</a>
       </ul>
     </nav>
+
+    
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-8">
+        <div class="card mb-8">
+          <div class="row card-body">
+            <div class="col-md-6">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            </div>
+          <div class="col-sm-6">
+            <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-8">
+        <div class="card mb-8">
+          <div class="row card-body">
+            <div class="col-sm-6">
+              <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
+            </div>
+              <div class="col-md-6">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- DELETE IF WORK <script src="index.js"></script> -->
   </body>
