--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div class="row justify-content-center mt-5">
       <div class="col-md-8">
-        <div class="card mb-8">
+        <div class="card border-0 mb-8">
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Card title</h5>
@@ -42,7 +42,7 @@
 
     <div class="row justify-content-center mt-5">
       <div class="col-md-8">
-        <div class="card mb-8">
+        <div class="card border-0 mb-8">
           <div class="row card-body">
             <div class="col-sm-6">
               <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
