--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <h1>Home</h1>
-    <nav class="navbar sticky-top bg-body-tertiary">
-      <ul class="nav justify-content-center">
+      <ul class="nav justify-content-center sticky-top">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
         </li>  
@@ -21,8 +20,6 @@
         <a href="index.html" class="active">Home old</a>
         <a href="about.html">About old</a>
       </ul>
-    </nav>
-
     
     <div class="row justify-content-center mt-5">
       <div class="col-md-8">
