--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- DELETE IF WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
   <body>
-    <h1>Home</h1>
       <ul class="nav justify-content-center sticky-top">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
@@ -22,6 +21,13 @@
         </li>
       </ul>
     
+    <div class=" justify-content-center"> 
+      <h1>Home</h1>
+      <h2>Place holder</h2>
+      <p>Place holder text</p>
+    </div>
+      
+
     <div class="row justify-content-center mt-5">
       <div class="col-md-8">
         <div class="card border-0 mb-8">
