--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </li>
       </ul>
     
-    <div class=" justify-content-center"> 
+    <div class="row justify-content-center"> 
       <h1>Home</h1>
       <h2>Place holder</h2>
       <p>Place holder text</p>
