--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </ul>
     
     <div class="row justify-content-center"> 
-      <h1>Home</h1>
-      <h2>Place holder</h2>
-      <p>Place holder text</p>
+      <h1 class="text-center">Home</h1>
+      <h2 class="text-center">Place holder</h2>
+      <p class="text-center">Place holder text</p>
     </div>
       
 
