--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html">Contact</a>
         </li>
       </ul>
     
