--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- DELETE IF WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
   <body>
-      <ul class="nav justify-content-center sticky-top">
+      <ul class="nav justify-content-center sticky-top bg-dark p-2">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
         </li>  
@@ -21,7 +21,7 @@
         </li>
       </ul>
     
-    <div class="row justify-content-center"> 
+    <div class="row justify-content-center mt-4"> 
       <h3 class="text-center">Home</h3>
       <h4 class="text-center">Place holder</h4>
       <p class="text-center">Place holder text</p>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-5">
+    <div class="row justify-content-center mt-5 mb-5">
       <div class="col-md-8">
         <div class="card border-0 mb-8">
           <div class="row card-body">
