--- a/about.html
+++ b/about.html
@@ -9,13 +9,21 @@
     <!-- DELETE WHEN WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
   <body>
-    <h1>About Page</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-      </ul>
-    </nav>
+
+    <ul class="nav justify-content-center sticky-top bg-dark p-2">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Home</a>
+      </li>  
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+    </ul>
+
+    <img src="https://picsum.photos/id/111/533/300" class="rounded mx-auto d-block" alt="sans"/>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- DELETE IF WORK <script src="index.js"></script> -->
   </body>
