--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       </li>
     </ul>
 
-    <img src="https://picsum.photos/id/111/533/300" class="rounded mx-auto d-block" alt="sans"/>
+    <img src="https://picsum.photos/id/111/533/300" class="rounded float-start" alt="sans"/>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- DELETE IF WORK <script src="index.js"></script> -->
