--- a/about.html
+++ b/about.html
@@ -10,30 +10,6 @@
   </head>
   <body>
 
-    <ul class="nav justify-content-center sticky-top bg-dark p-2">
-      <li class="nav-item">
-        <a class="nav-link active" href="index.html">Home</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
-      </li>
-    </ul>
-
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>About Page</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- DELETE WHEN WORK <link rel="stylesheet" href="screen.css"> -->
-      </head>
-      <body>
-    
         <ul class="nav justify-content-center sticky-top bg-dark p-2">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
@@ -60,8 +36,8 @@
                   <img src="https://picsum.photos/id/211/400/400" class="img-fluid rounded" alt="sans"/>
                 </div>
                   <div class="col-md-6">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">A little bit about me</h5>
+                    <p class="card-text">I'm a </p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                   </div>
               </div>
