--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@
                 </div>
                   <div class="col-md-6">
                     <h5 class="card-title">A little bit about me</h5>
-                    <p class="card-text">I'm a </p>
+                    <p class="card-text">Hey there
+
+                      My name is Joe, and I’m a UX/UI designer. I have been involved in the design field for a little over 9 years now. Some of the other fields I have been involved in is: Fine Arts, Interior Design, Marketing, Product Management,  Industrial Design, which I got my bachelors degree in this.Throughout my user journey there has been inspiration and experiences that I get to incorporate into the things I create. My desire to understand how users, no how people think and interact with things pushes me to continue creating, refining and improving projects I work on! </p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                   </div>
               </div>
