--- a/about.html
+++ b/about.html
@@ -37,9 +37,7 @@
                 </div>
                   <div class="col-md-6">
                     <h5 class="card-title">A little bit about me</h5>
-                    <p class="card-text">Hey there
-
-                      My name is Joe, and I’m a UX/UI designer. I have been involved in the design field for a little over 9 years now. Some of the other fields I have been involved in is: Fine Arts, Interior Design, Marketing, Product Management,  Industrial Design, which I got my bachelors degree in this.Throughout my user journey there has been inspiration and experiences that I get to incorporate into the things I create. My desire to understand how users, no how people think and interact with things pushes me to continue creating, refining and improving projects I work on! </p>
+                    <p class="card-text">Hey there, my name is Joe, and I’m a UX/UI designer. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a diverse portfolio of experience and knowledge. Throughout my personal journey, there has been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                   </div>
               </div>
