--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
           <div class="col-sm-6">
-            <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
+            <img src="Project 1.png" class="img-fluid rounded" alt="Image of a coding porject"/>
           </div>
         </div>
       </div>
