--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- DELETE IF WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
   <body>
       <ul class="nav justify-content-center sticky-top bg-dark p-2">
@@ -38,7 +37,7 @@
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
           <div class="col-sm-6">
-            <img src="Project 1.png" class="img-fluid rounded" alt="Image of a coding porject"/>
+            <img src="Project 1.png" class="img-fluid rounded" alt="Image of a coding porject 1"/>
           </div>
         </div>
       </div>
@@ -49,7 +48,7 @@
         <div class="card border-0 mb-8">
           <div class="row card-body">
             <div class="col-sm-6">
-              <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
+              <img src="Project2.png" class="img-fluid rounded" alt="Image of a ocding porject 2"/>
             </div>
               <div class="col-md-6">
                 <h5 class="card-title">Card title</h5>
@@ -71,13 +70,14 @@
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
           <div class="col-sm-6">
-            <img src="https://picsum.photos/id/211/533/300" class="img-fluid rounded" alt="sans"/>
+            <img src="Project 3.png" class="img-fluid rounded" alt="Image of a coding project 3"/>
           </div>
         </div>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- DELETE IF WORK <script src="index.js"></script> -->
+
+    <!-- Image resource https://picsum.photos/id/211/533/300 -->
   </body>
 </html>
