--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="card border-0 mb-8">
           <div class="row card-body">
             <div class="col-md-6">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Polaroid Cloud Project</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
