--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </ul>
     
     <div class="row justify-content-center mt-4"> 
-      <h3 class="text-center">Home</h3>
-      <h4 class="text-center">Place holder</h4>
+      <h3 class="text-center">Coding Project</h3>
+      <h4 class="text-center">Here are so of the coding projects that.......</h4>
       <p class="text-center">Place holder text</p>
     </div>
       
