--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div class="card border-0 mb-8">
               <div class="row card-body">
                 <div class="col-sm-6">
-                  <img src="https://picsum.photos/id/211/400/400" class="img-fluid rounded" alt="sans"/>
+                  <img src="Profile.png" class="img-fluid rounded" alt="sans"/>
                 </div>
                   <div class="col-md-6">
                     <h5 class="card-title">A little bit about me</h5>
