--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
         </ul>
     
          <div class="row justify-content-center mt-4"> 
-          <h3 class="text-center">Home</h3>
-          <h4 class="text-center">Place holder</h4>
+          <h3 class="text-center">Hey There!</h3>
+          <h4 class="text-center">My name is Joesph Ambrose</h4>
           <p class="text-center">Place holder text</p>
          </div>  
         
@@ -36,8 +36,8 @@
                   <img src="Profile.png" class="img-fluid rounded" alt="sans"/>
                 </div>
                   <div class="col-md-6">
-                    <h5 class="card-title">A little bit about me</h5>
-                    <p class="card-text">Hey there, my name is Joe, and I’m a UX/UI designer. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a diverse portfolio of experience and knowledge. Throughout my personal journey, there has been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
+                    <h5 class="card-title">A little more about me</h5>
+                    <p class="card-text">I’m a UX/UI designer. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a diverse portfolio of experience and knowledge. Throughout my personal journey, there has been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                   </div>
               </div>
