--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Polaroid Cloud Project</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              <p class="card-text">In this assignment I was given the design I needed to build out. I received a Figma file with the assets that needed to be included and built the site using HTML and CSS. This project helped me get a better understanding of how to take website schematics and turn it into a functioning page.              </p>
+              <p class="card-text"><small class="text-body-secondary">Project duration: 5 days</small></p>
             </div>
           <div class="col-sm-6">
             <img src="Project 1.png" class="img-fluid rounded" alt="Image of a coding porject 1"/>
@@ -52,8 +52,8 @@
             </div>
               <div class="col-md-6">
                 <h5 class="card-title">Incident Map</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text">For this project I needed to design and create an incident map for first responders. This would give them and the public up to date information on impacted areas of where the storm hit and buildings that were affected. For this process I created a prototype in Figma and based on the figma design I built it out in HTML and CSS.</p>
+                <p class="card-text"><small class="text-body-secondary">Project duration: 5 days</small></p>
               </div>
           </div>
         </div>
