--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
     
          <div class="row justify-content-center mt-4"> 
           <h3 class="text-center">Hey There!</h3>
-          <h4 class="text-center">My name is Joesph Ambrose</h4>
-          <p class="text-center">Place holder text</p>
+          <h4 class="text-center">my name is Joesph Ambrose</h4>
+          <!--- Might add in a part here in the future  <p class="text-center">Place holder text</p>. -->
          </div>  
         
       <div class="row justify-content-center mt-4">
