--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Blog Post</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              <p class="card-text">In this project I was able to build out a blog post design within Figma. After that I wrote up a post for the blog for it. I recreated my designs from Figma in HTML and styled it with CSS. After that I filled in my blog post and hosted it on Netlify.              </p>
+              <p class="card-text"><small class="text-body-secondary">Project duration: 5 days</small></p>
             </div>
           <div class="col-sm-6">
             <img src="Project 3.png" class="img-fluid rounded" alt="Image of a coding project 3"/>
