--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body class="bg-body">
+  <body class="bg-dark text-white">
       <ul class="nav justify-content-center sticky-top bg-dark p-2">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
