--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </li>
       </ul>
     
-    <div class="row justify-content-center mt-4"> 
+    <div class="row justify-content-center mt-4 bg-dark text-white"> 
       <h3 class="text-center">Coding Project</h3>
       <h4 class="text-center">Here are so of the coding projects that.......</h4>
       <p class="text-center">Place holder text</p>
     </div>
       
 
-    <div class="row justify-content-center mt-5">
+    <div class="row justify-content-center mt-5 bg-dark text-white">
       <div class="col-md-8">
         <div class="card border-0 mb-8">
           <div class="row card-body">
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-5">
+    <div class="row justify-content-center mt-5 bg-dark text-white">
       <div class="col-md-8">
         <div class="card border-0 mb-8">
           <div class="row card-body">
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-5 mb-5">
+    <div class="row justify-content-center mt-5 mb-5 bg-dark text-white">
       <div class="col-md-8">
         <div class="card border-0 mb-8">
           <div class="row card-body">
