--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
       
 
-    <div class="row justify-content-center mt-5 bg-dark text-white">
+    <div class="row justify-content-center mt-5">
       <div class="col-md-8">
-        <div class="card border-0 mb-8">
+        <div class="card border-0 mb-8 bg-dark text-white">
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Polaroid Cloud Project</h5>
@@ -43,9 +43,9 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-5 bg-dark text-white">
+    <div class="row justify-content-center mt-5">
       <div class="col-md-8">
-        <div class="card border-0 mb-8">
+        <div class="card border-0 mb-8 bg-dark text-white">
           <div class="row card-body">
             <div class="col-sm-6">
               <img src="Project2.png" class="img-fluid rounded" alt="Image of a ocding porject 2"/>
@@ -60,9 +60,9 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-5 mb-5 bg-dark text-white">
+    <div class="row justify-content-center mt-5 mb-5">
       <div class="col-md-8">
-        <div class="card border-0 mb-8">
+        <div class="card border-0 mb-8 bg-dark text-white">
           <div class="row card-body">
             <div class="col-md-6">
               <h5 class="card-title">Blog Post</h5>
