--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="bg-dark text-white">
-      <ul class="nav justify-content-center sticky-top bg-light-subtle p-2">
+      <ul class="nav justify-content-center sticky-top bg-secondary bg-gradient text-white p-2">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
         </li>  
