--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- DELETE WHEN WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
-  <body>
+  <body class="bg-dark text-white">
 
-        <ul class="nav justify-content-center sticky-top bg-dark p-2">
+        <ul class="nav justify-content-center sticky-top bg-secondary bg-gradient text-white p-2">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
           </li>  
@@ -30,7 +30,7 @@
         
       <div class="row justify-content-center mt-4">
           <div class="col-md-8">
-            <div class="card border-0 mb-8">
+            <div class="card border-0 mb-8 bg-dark text-white">
               <div class="row card-body">
                 <div class="col-sm-6">
                   <img src="Profile.png" class="img-fluid rounded" alt="sans"/>
