--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- DELETE WHEN WORK <link rel="stylesheet" href="screen.css"> -->
   </head>
   <body class="bg-dark text-white">
 
@@ -38,7 +37,7 @@
                   <div class="col-md-6">
                     <h5 class="card-title">A little more about me</h5>
                     <p class="card-text">I’m a UX/UI designer. I have been involved in design for a little over 8 years now and have been working professionally in the field for the past 5 years. I’ve gained experience working in several related areas including: Fine Arts, Interior Design, Marketing, and Product Management. My bachelor’s degree is in Industrial Design which gave me a diverse portfolio of experience and knowledge. Throughout my personal journey, there has been a multitude of different inspirations and experiences that I now get to utilize and incorporate into the designs I create. My desire to understand how people think and the way users interact with things pushes me to continue creating, refining and improving projects I work on!</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <p class="card-text"><small class="text-secondary">Last updated 3 mins ago</small></p>
                   </div>
               </div>
             </div>
@@ -46,13 +45,5 @@
         </div>
          
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- DELETE IF WORK <script src="index.js"></script> -->
       </body>
     </html>
-
-    <img src="https://picsum.photos/id/111/533/300" class="rounded float-start" alt="sans"/>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- DELETE IF WORK <script src="index.js"></script> -->
-  </body>
-</html>
