--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <p class="card-text">In this assignment I was given the design I needed to build out. I received a Figma file with the assets that needed to be included and built the site using HTML and CSS. This project helped me get a better understanding of how to take website schematics and turn it into a functioning page.              </p>
               <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p>
             </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 bg-image hover-zoom">
             <img src="Project 1.png" class="img-fluid rounded" alt="Image of a coding porject 1"/>
           </div>
         </div>
