--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a class="nav-link active text-white" href="index.html">Home</a>
         </li>  
         <li class="nav-item">
-          <a class="nav-link text-white" href="about.html">Contact</a>
+          <a class="nav-link text-white" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="about.html">About</a>
