--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div class="row justify-content-center mt-4 bg-dark text-white"> 
       <h3 class="text-center">Coding Project</h3>
-      <h4 class="text-center">Here are so of the coding projects that.......</h4>
+      <h4 class="text-center">Here are some of the coding projects that.......</h4>
       <p class="text-center">Place holder text</p>
     </div>
       
