--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     </ul>
     
     <div class="row justify-content-center mt-4"> 
-      <h3 class="text-center">Hey There!</h3>
-      <h4 class="text-center">my name is Joesph Ambrose</h4>
+      <h3 class="text-center">Want to know more?</h3>
+      <h4 class="text-center">Lets connect</h4>
           <!--- Might add in a part here in the future  <p class="text-center">Place holder text</p>. -->
     </div>  
         
@@ -32,9 +32,9 @@
         <div class="card border-0 mb-8 bg-dark text-white">
           <div class="row card-body">
             <div class="col-md-6">
-              <h5 class="card-title">Polaroid Cloud Project</h5>
-              <p class="card-text">In this assignment I was given the design I needed to build out. I received a Figma file with the assets that needed to be included and built the site using HTML and CSS. This project helped me get a better understanding of how to take website schematics and turn it into a functioning page.              </p>
-              <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p>
+              <h5 class="card-title">Why should you connect?</h5>
+              <p class="card-text">With my vast experience within User Experience, User Interface, Industrial Design and coding I can be an all in one stop from start to finish. If you are wanting to create something meaningful and impactful to the end user then look no further. Let's start a conversion today to help create a plan for tomorrow! Fill out the form with your email and a basic idea of what you are looking to accomplish and we will reach out to you within 1 - 2 business days. Talk to you soon!</p>
+             <!-- DELETE THIS <p class="card-text"><small class="text-secondary">Project duration: 5 days</small></p> -->
             </div>
             <div class="col-md-6">
               <div class="mb-3">
