--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="bg-dark text-white">
       <ul class="nav justify-content-center sticky-top bg-secondary bg-gradient text-white p-2">
         <li class="nav-item">
-          <a class="nav-link active text-white" href="index.html">Home</a>
+          <a class="nav-link active text-white fw-bold" href="index.html">Home</a>
         </li>  
         <li class="nav-item">
           <a class="nav-link text-white" href="contact.html">Contact</a>
